// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    3
     
    expenses
     totalling NT
    $4,700.00
  </h1>
</div>
`;

exports[`should correctly render expensesSummary with one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling NT
    $350.00
  </h1>
</div>
`;
